tests/baselines/reference/assignmentCompatWithGenericCallSignatures4.errors.txt
==== tests/cases/compiler/assignmentCompatWithGenericCallSignatures4.ts (2 errors) ====
    // some complex cases of assignment compat of generic signatures.
    
    interface I2<T> {
        p: T
    }
    
    var x: <T extends I2<T>>(z: T) => void
            ~~~~~~~~~~~~~~~
!!! assignmentCompatWithGenericCallSignatures4.ts(7,9): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var y: <T extends I2<I2<T>>>(z: T) => void
            ~~~~~~~~~~~~~~~~~~~
!!! assignmentCompatWithGenericCallSignatures4.ts(8,9): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    
    // These both do not make sense as we would eventually be comparing I2<T> to I2<I2<T>>, and they are self referencing anyway
    x = y 
    y = x 
    